refactor: 메서드 리팩터링(get(0) -> getFirst())