@@ -36,6 +36,6 @@ public class ExceptionController {
     @ExceptionHandler(MethodArgumentNotValidException.class)
     public ResponseEntity<String> MethodArgumentNotValidException(MethodArgumentNotValidException e) {
         return ResponseEntity.badRequest()
-                .body(PREFIX + e.getBindingResult().getFieldErrors().get(0).getDefaultMessage());
+                .body(PREFIX + e.getBindingResult().getFieldErrors().getFirst().getDefaultMessage());
     }
 }
